--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 							
 						</ul>
 						<ul class="icons">
-							<li><a href="https://github.com/NirvanSiga/PortfolioProjects" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://in.linkedin.com/in/nirvan-siga-2a1015b9" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/NirvanSiga/PortfolioProjects" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -204,8 +204,8 @@
 							<section>
 								<h4>Social</h4>
 								<ul class="icons alt">
-									<li><a href="https://github.com/NirvanSiga/PortfolioProjects" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://in.linkedin.com/in/nirvan-siga-2a1015b9" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/NirvanSiga/PortfolioProjects" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
