--- a/index.html
+++ b/index.html
@@ -189,9 +189,8 @@
 
 						<section class="split contact">
 							<section class="alt">
-								<h4>Address</h4>
-								<p>S-2 Lalaji Homes, 3rd Street, Sri Ganesh Nagar,<br />
-								 Kolapakkam, Chennai 600 125</p>
+								<h4>Location</h4>
+								<p>Chennai 600 125</p>
 							</section>
 							<section>
 								<h4>Phone</h4>
