--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h4>Location</h4>
-								<p>Chennai 600 125</p>
+								Chennai 600 125
 							</section>
 							<section>
 								<h4>Phone</h4>
