--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<a href="https://github.com/NirvanSiga/PortfolioProjects/blob/main/Time%20Series%20Forecasting.ipynb" class="image fit"><img src="images\Python-Logo-700x394.png" alt="" /></a>
 									<p>Time series forecasting of birth rates using Python</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/NirvanSiga/PortfolioProjects/blob/main/Time%20Series%20Forecasting.ipynb" class="button">View Projects</a></li>
+										<li><a href="https://github.com/NirvanSiga/PortfolioProjects/blob/main/Time%20Series%20Forecasting.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 
@@ -156,7 +156,7 @@
 									<a href="https://github.com/NirvanSiga/PortfolioProjects/tree/main/Churn%20modelling" class="image fit"><img src="images\Python-Emblem-700x394.png" alt="" /></a>
 									<p>Churn modelling using Python</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/NirvanSiga/PortfolioProjects/tree/main/Churn%20modelling" class="button">View Projects</a></li>
+										<li><a href="https://github.com/NirvanSiga/PortfolioProjects/tree/main/Churn%20modelling" class="button">View Project</a></li>
 									</ul>
 								</article>
 
@@ -168,7 +168,7 @@
 									<a href="https://github.com/NirvanSiga/PortfolioProjects/blob/main/Movie%20Correlation%20Project.ipynb" class="image fit"><img src="images\imdb-logo.png" alt="" /></a>
 									<p>A correlation analysis of gross revenue</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/NirvanSiga/PortfolioProjects/blob/main/Movie%20Correlation%20Project.ipynb" class="button">View Projects</a></li>
+										<li><a href="https://github.com/NirvanSiga/PortfolioProjects/blob/main/Movie%20Correlation%20Project.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 
@@ -180,7 +180,7 @@
 									<a href="https://github.com/NirvanSiga/PortfolioProjects/tree/main/Excel%20projects" class="image fit"><img src="images\Microsoft-Excel-Logo-700x394.png" alt="" /></a>
 									<p>A collection of Excel dashboards</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/NirvanSiga/PortfolioProjects/tree/main/Excel%20projects" class="button">View Project</a></li>
+										<li><a href="https://github.com/NirvanSiga/PortfolioProjects/tree/main/Excel%20projects" class="button">View Projects</a></li>
 									</ul>
 								</article>
 
@@ -191,7 +191,7 @@
 							<section class="alt">
 								<h4>Location</h4>
 								Chennai 600 125
-							</section>
+							</section><br>
 							<section>
 								<h4>Phone</h4>
 								(+91) 733 833 2701
